<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">


    <ImageView
        android:id="@+id/img_onboarding"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/onboarding_habits"
        android:contentDescription="@string/onboarding_illustration"/>


    <TextView
        android:id="@+id/txt_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_your_habits"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primary_violet"
        android:layout_marginTop="48dp"
        android:textAlignment="center"/>


    <TextView
        android:id="@+id/txt_onboarding_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_healthy_routines_and_track_your_daily_progress_with_ease"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"/>

</LinearLayout>